background color change

--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -41,7 +41,7 @@
         background-image:url('../assets/images/ganzi.jpg');
         background-size:cover;
         font-size:20px;
-        background: black;
+        background: #E8948C;
         }
 
         p{
