--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -93,7 +93,7 @@
 <div class="intro__wrapper"> 
   <div class="intro__mypic">
     <h1>Gesang Lamu</h1>
-    <img src="assets/mypic.jpg" width="300">
+    <img src="https://photos-1.dropbox.com/t/2/AADi8arSzNRs9Z1P_GPA7r_orEyRo6-Ch8sVt5Cz8Olb6w/12/283078975/jpeg/32x32/1/_/1/2/IMG_20170315_200146_680.jpg/ELnPjpACGL9ZIAcoBw/0D6pgodnM9HgEelbF7VHQDDVj349NQk-54phwlMHjNw?size=1280x960&size_mode=3" width="300">
   </div>
 
   <div class="indtro__projectList">
