--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -50,6 +50,13 @@
         }
         p a{
           color:white;
+          text-decoration: none;
+          display: inline;
+        }
+
+        p a:hover{
+          background: lightblue;
+          padding:10px;
         }
 
 .indtro__projectList{
@@ -97,7 +104,7 @@
   </div>
 
   <div class="indtro__projectList">
-    <p> <a href = "https://dl.dropboxusercontent.com/u/29513364/cardMatchingGame/index.html"> Card Game(work in progress) </a> </p>
+    <!--<p> <a href = "https://dl.dropboxusercontent.com/u/29513364/cardMatchingGame/index.html"> Card Game(work in progress) </a> </p>-->
 
     <p> <a href ="http://chicagofun.herokuapp.com/"> Chicago Fun </a> </p>
 
@@ -105,7 +112,7 @@
 
     <p> <a href ="http://myhundredwebsites.herokuapp.com/colors"> Play with colors</a> </p>
 
-    <p> <a href ="http://myhundredwebsites.herokuapp.com/weatherapp"> Weather App </a> </p>
+    <!--<p> <a href ="http://myhundredwebsites.herokuapp.com/weatherapp"> Weather App </a> </p>-->
 
     <p> <a href ="http://myhundredwebsites.herokuapp.com/fortunecookies"> Fortune Cookies </a> </p>
 
@@ -115,7 +122,7 @@
 
     <p> <a href ="http://myhundredwebsites.herokuapp.com/shapes"> Play with Shape </a> </p>
 
-    <p> <a href ="http://crushmatchingapp.herokuapp.com/"> Crush Matching </a> </p>
+    <!--<p> <a href ="http://crushmatchingapp.herokuapp.com/"> Crush Matching </a> </p>-->
 
     <p> <a href ="http://pacific-wildwood-5531.herokuapp.com/">My Bloging App </a> </p>
 
