--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -116,7 +116,7 @@
 
     <p> <a href ="http://myhundredwebsites.herokuapp.com/fortunecookies"> Fortune Cookies </a> </p>
 
-    <p> <a href = "http://gesarlhamo-bitstarter-mooc.herokuapp.com/"> Final project for a cousera class:startup engineering </a> </p>
+    <p> <a href = "http://gesarlhamo-bitstarter-mooc.herokuapp.com/"> Final project for cousera class: startup engineering </a> </p>
 
     <p> <a href ="http://myhundredwebsites.herokuapp.com/countdown"> Timer </a> </p>
 
@@ -124,7 +124,7 @@
 
     <!--<p> <a href ="http://crushmatchingapp.herokuapp.com/"> Crush Matching </a> </p>-->
 
-    <p> <a href ="http://pacific-wildwood-5531.herokuapp.com/">My Bloging App </a> </p>
+    <p> <a href ="http://pacific-wildwood-5531.herokuapp.com/">My Blog(used CRUD Rails) </a> </p>
 
     <p><a href="https://github.com/gesarlhamo"> My Github </a></p>
   </div>
