style tweak for hover

--- a/app/views/introduction/index.html.erb
+++ b/app/views/introduction/index.html.erb
@@ -52,11 +52,12 @@
           color:white;
           text-decoration: none;
           display: inline;
+          transition: all 0.5s ease;
+          padding: 10px;
         }
 
         p a:hover{
           background: lightblue;
-          padding:10px;
         }
 
 .indtro__projectList{
